--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -76,18 +76,41 @@ h2 {
   width: 100%;
 }
 
+.carousel {
+  margin-bottom: 1rem;
+}
+
+.carousel-home-page {
+  margin-bottom: 1rem;
+}
+
+.carousel-home-page:last-child {
+  margin-bottom: 0rem;
+}
+
+/* parent */
+
 .posters-carousel {
+  width: 100%;
   padding: 1rem;
   border: 3px solid rgba(255, 255, 255, 0.4);
   border-radius: 10px;
 }
 
-.posters-carousel .row {
+/* children */
+
+.poster-carousel {
   margin-bottom: 1rem;
 }
 
-.posters-carousel .row:last-child {
-  margin-bottom: 0;
+.poster-carousel:last-child {
+  margin-bottom: 0rem;
+}
+
+@media (min-width: 1400px) {
+  .posters-carousel {
+    min-height: 450px;
+  }
 }
 
 section {
@@ -96,7 +119,6 @@ section {
 
 .section-tablet img {
   height: 300px;
-  /* width: 100%; */
 }
 
 .section-phone img {
@@ -109,7 +131,6 @@ footer {
 
 footer .logo-text {
   font-size: 1.25rem;
-  /* opacity: 0.75; */
 }
 
 footer > span {
